src/app/globals.css
@import "tailwindcss";

@theme inline {
  --font-chivo: var(--font-chivo-mono);
  --font-twk: var(--font-twk-lausanne);
  /* 响应式 */
  --breakpoint-md: 768px;
  --breakpoint-lg: 1280px;
  /* 颜色 */
  --color-secondary: #8c8c8c;
}

body {
  background-color: #000;
  color: #fff;
}

@layer utilities {
  .text-lg {
    @apply text-[56px] lg:text-[150px] leading-[60px] lg:leading-[150px] tracking-[-0.018em];
  }
  .text-md {
    @apply text-[24px] lg:text-[56px] leading-[26px] lg:leading-[60px] tracking-[-0.009em];
  }
  .text-base {
    @apply text-[15px] md:text-[15px] lg:text-[22px] leading-[18px] md:leading-[18px] lg:leading-[28px] tracking-[-0.0045em];
  }

  .text-sm {
    @apply text-[15px] leading-[18px];
  }

  .padding-x {
    @apply px-[15px] md:px-[30px];
  }

  .grid-layout {
    @apply grid grid-cols-6 md:grid-cols-12 gap-x-[6px];
  }

  .underline-offset {
    @apply underline underline-offset-7;
  }
}

.redirect-link:hover .redirect-arrow {
  transform: translateX(8px);
  color: var(--color-secondary);
}

.redirect-link:hover .redirect-text {
  color: var(--color-secondary);
}

.hover-scale {
  --scale-value: 1.04;
}

.hover-scale:hover {
  transform: scale(var(--scale-value));
}

.about-title-line,
.about-subtitle-line {
  transform-origin: left;
  transform: scaleX(1);
  height: 1px;
  background-color: var(--color-secondary);
  width: 100%;
}

.footer-text {
  @apply text-[15px] leading-[18px] md:text-[24px] md:leading-[26px] lg:text-[56px] lg:leading-[60px];
}

.filter {
  filter: blur(50px);
}

.info-animated .word-item {
  display: inline-block;
  white-space: nowrap;
}

.info-animated > span {
  display: inline;
}

.menu-full-height {
  height: 100vh;
  height: 100dvh;
  min-height: -webkit-fill-available;
}

